--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
       {
         "label": "Evro Dark",
         "uiTheme": "vs-dark",
-        "path": "./themes/Evro Dark-color-theme.json"
+        "path": "./themes/Evro Dark-color-theme.json",
+        "images": {
+          "icon": "./logo/evrodarklogo.png"
+        }
       }
     ]
   }
