--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "evro-dark",
   "displayName": "Evro Dark",
-  "description": "A vibrant and dynamic theme designed to enhance your coding experience.",
+  "description": "Immerse yourself in the enchanting glow of Evro Dark",
   "version": "1.8.0",
   "publisher": "EvroHQ",
   "license": "MIT",
