modify description in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "evro-dark",
   "displayName": "Evro Dark",
-  "description": "Immerse yourself in the enchanting glow of Evro Dark",
+  "description": "Immerse yourself in the enchanting glow of Evro Dark and let your creativity soar under the stars of the digital night sky. ✨",
   "version": "1.8.1",
   "publisher": "EvroHQ",
   "license": "MIT",
